--- a/style.css
+++ b/style.css
@@ -41,7 +41,6 @@ body{
     display: grid;
     justify-content: start;
     border: 2px solid rgb(174, 187, 255);
-    /* box-sizing: border-box; */
 }
 .tile{
     width: 33px;
@@ -49,6 +48,11 @@ body{
     color: rgb(75, 75, 212);
     text-align: center;
     overflow: hidden;
+    display: flex;
+    justify-content: center;
+    font-size: 24px;
+    font-weight: bold;
+    
 }
 .tile:hover{
     opacity: 0.8;
