--- a/style.css
+++ b/style.css
@@ -1,8 +1,21 @@
+@import url('https://fonts.googleapis.com/css2?family=Encode+Sans:wght@100;400;500;600;700&display=swap');
 body{
     margin: 0;
     padding: 0;
     background-color: rgb(24, 34, 46);
+    font-family: 'Encode Sans', sans-serif;
     
+}
+.board-head{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: rgb(174, 187, 255);
+}
+.board-head h2{
+    margin: 0;
+    padding-right: 10px;
+    font-size: 1.2em;
 }
 .control-panel{
     background-color: rgb(23, 32, 83);
@@ -10,9 +23,6 @@ body{
     flex-direction: row;
     justify-content: space-around;
     width: 200px;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    border: 1px solid white;
 }
 .control-btn{
     text-align: center;
@@ -20,27 +30,100 @@ body{
     display: flex;
     justify-content: center;
     width: 50%;
-    padding: 10px 0;
+    padding:10px 0;
     transition: ease, 300ms;
 }
+.control-btn img{
+    height: 80%;
+}
 
+.bomb-counter-container{
+    display: flex;
+    align-items: center;
+    color: rgb(145, 0, 0);
+    justify-content: center;
+}
+.bomb-counter-container img{
+    width: 25px;
+    margin-right: 20px;
+}
+.bomb-counter-container span{
+    font-weight: bold;
+    font-size: 1.2em;
+}
 .control-btn:hover{
     cursor: pointer;
     background-color: rgb(255, 255, 255, .1);
 }
+
 .game-container{
-    margin: 0 auto;
+    margin: 20px auto;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    overflow: hidden;
+    box-shadow: rgba(255, 255, 255, 0.15) 0px 48px 100px 0px;
 }
 
 .container{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    position: relative;
+}
+.main-menue{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.247);
+    color: white;
+    min-width: 800px;
+}
+.main-menue h1{
+    margin-top: 0;
+    font-size: 4em;
+    text-transform: uppercase;
+    letter-spacing: 6px;
+    color: rgba(0, 0, 0, 0.37);
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+}
+.main-menue select{
+    margin: 0 auto;
+    background-color: rgb(23, 32, 83);
+    color: rgb(219, 219, 219);
+    padding: 8px 25px;
+    font-size: 1em;
+    border: none;
+}
+select:hover{
+    cursor: pointer;
+}
+.new-game-btn{
+    margin-top: 40px;
+    display: inline-block;
+    background-color: rgb(145, 0, 0);
+    padding: 30px 80px;
+    font-weight: normal;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+                rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+                rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+    border-radius: 5px;
+}
+
+.new-game-btn:hover{
+    cursor: pointer;
+    background-color: rgb(175, 14, 14);
+    font-weight: bold;
 }
 .board{
     display: grid;
     justify-content: start;
-    border: 2px solid rgb(174, 187, 255);
 }
 .tile{
     width: 33px;
