--- a/style.css
+++ b/style.css
@@ -15,14 +15,14 @@ body{
 .board-head h2{
     margin: 0;
     padding-right: 10px;
-    font-size: 1.2em;
+    font-size: 1em;
 }
 .control-panel{
     background-color: rgb(23, 32, 83);
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    width: 200px;
+    width: 150px;
 }
 .control-btn{
     text-align: center;
@@ -44,12 +44,12 @@ body{
     justify-content: center;
 }
 .bomb-counter-container img{
-    width: 25px;
-    margin-right: 20px;
+    width: 20px;
+    margin-right: 5px;
 }
 .bomb-counter-container span{
     font-weight: bold;
-    font-size: 1.2em;
+    font-size: 1em;
 }
 .control-btn:hover{
     cursor: pointer;
@@ -84,29 +84,37 @@ body{
     min-width: 800px;
 }
 .main-menue h1{
-    margin-top: 0;
+    margin: 0;
     font-size: 4em;
     text-transform: uppercase;
     letter-spacing: 6px;
-    color: rgba(0, 0, 0, 0.37);
+    color: rgba(36, 24, 104, 0.726);
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 }
 .main-menue select{
-    margin: 0 auto;
+    margin: 20px auto;
     background-color: rgb(23, 32, 83);
     color: rgb(219, 219, 219);
     padding: 8px 25px;
     font-size: 1em;
     border: none;
 }
+.main-menue a{
+    margin-top: 20px;
+    color: rgb(145, 0, 0);
+    font-weight: bold;
+    position: absolute;
+    top: 100px;
+    right: 100px;
+
+}
 select:hover{
     cursor: pointer;
 }
 .new-game-btn{
-    margin-top: 40px;
     display: inline-block;
     background-color: rgb(145, 0, 0);
-    padding: 30px 80px;
+    padding: 15px 40px;
     font-weight: normal;
     text-transform: uppercase;
     letter-spacing: 4px;
